# oracle-aidev-template

./: .aider.conf.yml  .clinerules  .cursorrules  .env.example  .gitignore  .opencode  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  GEMINI.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.amazonq/: rules.md
.augment/: rules.md
.claude/skills/oracle-db/: skill.md
.continue/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/skills/oracle-db/: skill.md
.github/workflows/: ci.yml
app/: __init__.py  cache.py  chunking.py  db.py  main.py  rag.py  vector_search.py
scripts/: init-schema.sql  start-db.sh  stop-db.sh  wait-for-db.sh
tests/: conftest.py  test_chunking.py  test_connection.py  test_rag.py  test_vector_search.py
